--- a/request-approver.html
+++ b/request-approver.html
@@ -65,6 +65,7 @@
 
         <div class="layout">
             <aside class="sidenav">
+                <a href="Dashboard_approver.html">
                 <div class="side-item">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="4" width="18" height="14" rx="2"/>
@@ -72,16 +73,36 @@
                     </svg>
                     <span>Đăng Kí</span>
                 </div>
+                </a>
 
+                <a href="request-approver.html">
                 <div class="side-item">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 3h18v14H3z"/>
-                        <path d="M8 21h8"/>
+                    <svg <svg xmlns="http://www.w3.org/2000/svg" 
+                        width="20" height="20" 
+                        viewBox="0 0 24 24" 
+                        fill="none" 
+                        stroke="currentColor" 
+                        stroke-width="2" 
+                        stroke-linecap="round" 
+                        stroke-linejoin="round">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                    <polyline points="14 2 14 8 20 8"/>
+                    <path d="M9 15l2 2 4-4"/>
                     </svg>
-                    <span>Báo Cáo</span>
+                    <span>Duyệt</span>
                 </div>
-            </aside>
+                </a>
 
+                <a href="Report_approver.html">
+                    <div class="side-item">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 3h18v14H3z"/>
+                            <path d="M8 21h8"/>
+                        </svg>
+                        <span>Báo Cáo</span>
+                    </div>
+                </a>
+            </aside>
             <main class="main">
                 <section class="card" style="padding: 18px 18px 10px">
                     <div class="filter-row">
